# browser-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  agent_browser.py  cli.py  controller.py  logger.py  main.py  openrouter.py  platform_check.py  tools.py
tests/: __init__.py  test_openrouter.py  test_tools.py
